--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ sqlalchemy==2.0.36
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 nbstripout==0.8.1
+numpy
+matplotlib
+plotly
+seaborn==0.13.2
+dash==3.0.4
+gunicorn==23.0.0
+streamlit==1.45.1
